feat: add EdDSA support and optimize e2e CI pipeline (#255)
## Summary

- Add EdDSA (Ed25519/Ed448) signature validation support for JWT tokens
- Optimize e2e CI pipeline runtime (~36% reduction) via Maven module
selection, parallel builds, and Playwright serial fixtures
- Fix signature tampering bug in `MODIFY_SIGNATURE_LAST_CHAR` test
strategy (base64url padding + generator exhaustion)
- Address code review feedback: extract shared helpers, reduce
duplication

## Changes

### EdDSA Support
- `JwkKeyHandler`: add `parseOkpKey()` and `determineOkpAlgorithm()` for
OKP key type
- `JwksContentHandler`: handle OKP keys in JWKS parsing
- `SignatureAlgorithmPreferences`: include EdDSA in allowed algorithms
- `InMemoryKeyMaterialHandler`: EdDSA key generation and
`encodeEdECPublicKey()` helper
- Full test coverage for Ed25519/Ed448 key parsing, rejection of
unsupported curves

### E2E Pipeline Optimization
- Skip benchmarking modules during `install` phase (`-pl` module
selection)
- Add parallel Maven builds (`-T 1C`)
- Increase CI timeout to 30 minutes for safety margin
- Playwright serial test fixtures with shared browser pages (Status
Config + Token Debugger)
- Remove unnecessary `networkidle` wait and fixed 1000ms timeout in
navigation

### Signature Tampering Fix
- Avoid modifying last base64url character (padding bits don't affect
decoded bytes)
- Add deterministic fallback when `generateDifferentChar` exhausts retry
attempts
- Regression test covering all critical character combinations

## Test plan
- [x] 1303 unit tests pass (`pre-commit` profile clean)
- [x] All 30 Playwright e2e tests pass
- [x] Signature tampering regression test reproduces and verifies the
fix
- [x] EdDSA key parsing tests cover valid keys, missing/unsupported
curves, invalid base64url

🤖 Generated with [Claude Code](https://claude.com/claude-code)

---------

Co-authored-by: Oliver Wolff <23139298+cuioss@users.noreply.github.com>
Co-authored-by: Claude Opus 4.6 <noreply@anthropic.com>